--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="End Hire" Height="511" Width="641" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
-    <Border Margin="72,0,69,27" BorderThickness="3,3,3,3" BorderBrush="#FF1C6DD0" CornerRadius="15,15,15,15" Background="#FFEEF6FF" Height="435" VerticalAlignment="Bottom">
-        <Grid Margin="59,27,61,17">
+        Title="End Hire" Height="527" Width="641" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+    <Border Margin="72,38,69,34" BorderThickness="3,3,3,3" BorderBrush="#FF1C6DD0" CornerRadius="15,15,15,15" Background="#FFEEF6FF">
+        <Grid Margin="59,17,61,9">
             <Button x:Name="btnNext"
                              
                 BorderThickness="0"
@@ -16,7 +16,7 @@
                 FontSize="12"
                 FontFamily="MonteSerrat"
                 Cursor="Hand"
-                Click="btnSubmit_Click" Margin="0,0,-7,1" Height="53" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="175">
+                Click="btnSubmit_Click" Margin="0,331,-7,0" Height="53" VerticalAlignment="Top" HorizontalAlignment="Right" Width="175">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
                         <Setter Property="Background" Value="#71A4E1"/>
@@ -47,7 +47,7 @@
                 FontSize="12"
                 FontFamily="MonteSerrat"
                 Cursor="Hand"
-                Click="btnClear_Click" Margin="0,0,198,3" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="177">
+                Click="btnClear_Click" Margin="0,332,198,0" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Width="177">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
                         <Setter Property="Background" Value="Red"/>
@@ -75,11 +75,11 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,0,94,322" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
+                Margin="0,47,94,0" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
-                Margin="0,63,25,0" Background="White" Height="37" VerticalAlignment="Top" HorizontalAlignment="Right" Width="328"
+                Margin="0,63,25,0" Background="White" HorizontalAlignment="Right" Width="328" Height="37" VerticalAlignment="Top"
                     >
                 <TextBox x:Name="HireIDtxt"
                     FontSize="15"
@@ -100,7 +100,7 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,0,95,255" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Return Date"/></TextBlock>
+                Margin="0,114,95,0" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Return Date"/></TextBlock>
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
@@ -113,7 +113,7 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,0,95,186" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="End Milage"/></TextBlock>
+                Margin="0,183,95,0" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="End Milage"/></TextBlock>
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
@@ -139,13 +139,13 @@
                 Foreground="Black"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,0,58,356" Text="End Hire Form" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"/>
+                Margin="0,9,58,0" Text="End Hire Form" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246"/>
             <TextBlock
                 FontSize="12"
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,0,95,117" RenderTransformOrigin="0.5,0.5" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246">
+                Margin="0,252,95,0" RenderTransformOrigin="0.5,0.5" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246">
                 <TextBlock.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleY="1"/>
